2009-08-11  Gordon Williams <gordon.williams@collabora.co.uk>

	* matchbox/core/mb-wm-client-window.c: Removed the Monster Hack again,
	  but only for the desktop window. This solves the regressed fix for
	  desktop panning not working when panning from the very right hand 
	  side of the screen (desktop was 799x479, so never got ButtonPress
	  when X==799).

2009-08-11  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.56

	* matchbox/core/mb-wm-client-base.c (mb_wm_client_base_display_sync):
	Take WM_TAKE_FOCUS protocol into account when assigning the focus.
	Fixes: NB#131838 - focus is not correctly set when navigating back to
	previous window stack

2009-08-10  Gordon Williams <gordon.williams@collabora.co.uk>
	
	Fixes regression NB#131580 on new Gtk - Solid home applets

	* matchbox/core/mb-wm-types.h
	* matchbox/core/mb-wm-atoms.c
	* matchbox/core/mb-wm-client.c: 
	Revert RGBA Sapwood changes that search for the MAEMO_IGNORE_ALPHA
	property on windows. It seems GTK is unable to tell if a window is
	supposed to be transparent or not any more and just sets the property
	even for transparent windows. We must go back to the old method of
	making sure apps and dialogs are solid, while allowing anything else
	to be transparent.

2009-08-10  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.55

	Patch from Laszlo Pere for NB#117853.

	* matchbox/core/mb-wm-main-context.[ch]
	(mb_wm_main_context_x_event_handler_remove): Do not modify the linked
	list but merely mark the list element as deleted.
	(mb_wm_main_context_handle_x_event): After calling all event handlers,
	remove event handlers that have been marked as deleted. 
	* matchbox/core/mb-wm-decor.c (mb_wm_decor_button_destroy): Move
	removal of the XEvent handler back to mb_wm_decor_button_unrealize.
	Now it should be safe.

2009-08-07  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.54

2009-08-06  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>
